Regression: OBJ/MTL import: new 3.2 importer does not set EEVEE blend mode for illum values #97644

Closed
opened 2022-04-27 07:51:39 +02:00 by Scurest · 8 comments
Contributor

Blender Version
Broken: blender-3.2.0-alpha+master.bf80dc2bd4ac
Worked: 3.1

Short description of error
In the new OBJ importer, the material blend mode for Eevee is set to "Alpha Blend" if a there's an alpha texture (map_d), but not if there's an alpha factor (d) with a suitable "illum" mode. The old importer sets it correctly.

Exact steps for others to reproduce the error
Import an MTL material with a d 0.5 line but no map_d line, and illum value of 9.

**Blender Version** Broken: blender-3.2.0-alpha+master.bf80dc2bd4ac Worked: 3.1 **Short description of error** In the new OBJ importer, the material blend mode for Eevee is set to "Alpha Blend" if a there's an alpha texture (map_d), but not if there's an alpha factor (d) with a suitable "illum" mode. The old importer sets it correctly. **Exact steps for others to reproduce the error** Import an MTL material with a `d 0.5` line but no `map_d` line, and illum value of 9.
Author
Contributor

Added subscriber: @scurest

Added subscriber: @scurest
Aras Pranckevicius self-assigned this 2022-04-27 08:43:31 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Aras Pranckevicius changed title from OBJ/MTL import: opaque blend mode for d<1 to OBJ/MTL import: new 3.2 importer does not set blend mode for d<1 2022-04-27 08:44:08 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Marking as High prio since it is a regression from the old importer

Marking as High prio since it is a regression from the old importer
Philipp Oeser changed title from OBJ/MTL import: new 3.2 importer does not set blend mode for d<1 to Regression: OBJ/MTL import: new 3.2 importer does not set blend mode for d<1 2022-04-27 08:57:51 +02:00

This issue was referenced by c87f6242b9

This issue was referenced by c87f6242b952d3821d7bdbdd8075b27479791448
Aras Pranckevicius changed title from Regression: OBJ/MTL import: new 3.2 importer does not set blend mode for d<1 to Regression: OBJ/MTL import: new 3.2 importer does not set EEVEE blend mode for illum values 2022-04-27 21:20:37 +02:00
wanna0077 commented 2022-04-28 16:26:09 +02:00 (Migrated from localhost:3001)

Added subscriber: @wanna0077

Added subscriber: @wanna0077
Author
Contributor

Since this switched to focus on the illum regression, I've refiled the original d<1 issue as #97743.

Since this switched to focus on the illum regression, I've refiled the original d<1 issue as #97743.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:49 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97644
No description provided.